--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -158,6 +158,50 @@
 
 ### 成功案例
 
+#### 1
+
+##### 案例描述
+
+如果用户对于一部电影感兴趣，可以点击“想看”。点击后，爱心图标会变成红色，表明用户操作成功。
+
+##### 相关界面图片
+
+![](https://ae02.alicdn.com/kf/Hedf205d759cc4d4f876ed563d4e4b9a65.png)
+
+##### 涉及原则
+
+1：系统状态的可视性
+
+#### 2
+
+##### 案例描述
+
+用户的下拉菜单各项内容功能清晰，且能覆盖系统功能。
+
+##### 相关界面图片
+
+![](https://ae02.alicdn.com/kf/Hbe6e9ee87bbc4a719275d89614b7a587r.png)
+
+##### 涉及原则
+
+9：最小化设计
+
+#### 3
+
+##### 案例描述
+
+支付电影票时会提示全部需要的操作步骤和当作操作步骤。
+
+##### 相关界面图片
+
+![](C:/Users/Puzongyue/AppData/Roaming/Typora/typora-user-images/image-20201102095358113.png)
+
+##### 涉及原则
+
+1：系统状态的可视性
+
+7：依赖识别而非记忆
+
 ## b. 用户测试
 
 ### 测试目标
