update：可用性问题

--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -62,6 +62,8 @@
 
 最热的三部电影采取和下方绿色图标一样的图标，颜色可更改为红色。
 
+
+
 #### 2
 
 ##### 问题描述
@@ -83,6 +85,8 @@
 ##### 改进建议
 
 统一配色。上方三部电影数字和图标全部使用红色，下方电影全部使用绿色。
+
+
 
 #### 3
 
@@ -108,6 +112,8 @@
 
 让整个电影项目（图片，文字介绍）都变成可点击的。
 
+
+
 #### 4
 
 ##### 问题描述
@@ -132,6 +138,8 @@
 
 电影排序将热度，上映时间等纳入考虑。
 
+
+
 #### 5
 
 ##### 问题描述
@@ -155,6 +163,134 @@
 ##### 改进建议
 
 取消未付款电影票的退票入口。
+
+
+
+#### 6
+
+##### 问题描述
+
+首页的“即将上映”小标题离上方轮播图更近，但实际描述的应该是下方的卡片展示。
+
+##### 相关界面图片
+
+![mainpage.png](https://i.loli.net/2020/11/02/dXhaNqwOoEr1cUP.png)
+
+##### 违反原则
+
+7：依赖识别而非记忆
+
+8：使用的灵活性及有效性
+
+##### 严重性等级
+
+1：次要问题，需要修复，但优先级较低
+
+##### 改进建议
+
+调整间距，加大“正在热映”的轮播图和“即将上映”的卡片式展示的区分度
+
+
+
+#### 7
+
+##### 问题描述
+
+首页“票房统计”和“最受欢迎”的列表右侧为对应排名而非该电影票房或“用户喜欢”数的统计的具体数值，导致两张表单区分度不高，容易引起用户对排名依据的理解歧义。
+
+##### 相关界面图片
+
+<img src="https://ae02.alicdn.com/kf/H5d5a24776d0e4fc5b425865546b798e3g.png" alt="mainpage-3.PNG" style="zoom:50%;" /><img src="https://ae02.alicdn.com/kf/H62b43054e83c4141b5d2c890ec8e7ca78.png" alt="mainpage-2.PNG" style="zoom:50%;" />
+
+##### 违反原则
+
+2：系统应与真实世界相符合
+
+##### 严重性等级
+
+2：主要问题，需要修复且优先级较高
+
+##### 改进建议
+
+“票房统计”的右侧数值应为该电影的实时票房，“最受欢迎”的右侧数值应为该电影被用户喜欢的次数
+
+
+
+#### 8
+
+##### 问题描述
+
+电影界面存在“已下架”电影，对用户没有帮助，且其详情仍可以进入，可以点击“想看”，也还有排片界面。
+
+##### 相关界面图片
+
+![image.png](https://ae02.alicdn.com/kf/H19c252ddfee44d368007fba8b19c8bcbz.png)
+
+![image.png](https://ae01.alicdn.com/kf/H2d868cd4956a4c6a9bd77feb2ec65bc1t.png)
+
+##### 违反原则
+
+2：系统应与真实世界相符合
+
+##### 严重性等级
+
+3：灾难性问题，必须被修复
+
+##### 改进建议
+
+电影界面不显示“已下架”电影
+
+
+
+#### 9
+
+##### 问题描述
+
+当用户想要退一些不能退的票，如当前是挂起状态的未付款的票时，系统给出的提示让用户无法理解。
+
+##### 相关界面图片
+
+![image.png](https://ae04.alicdn.com/kf/He3005c295e7c4a8f9414cffa5ba98587v.png)
+
+##### 违反原则
+
+5：帮助用户识别、诊断和修复错误
+
+##### 严重性等级
+
+2：主要问题，需要修复且优先级较高
+
+##### 改进建议
+
+根据电影票的状态给出针对性无法退票的原因。
+
+
+
+#### 10
+
+##### 问题描述
+
+“我的电影票”界面展示了用户不应该知道的内容——电影票ID；电影票状态（包括已付款、未付款、已使用等）没有区分度，全都列在了一张表格里。
+
+##### 相关界面图片
+
+![image.png](https://ae01.alicdn.com/kf/Haf54893d66e348bd95a023341c2154143.png)
+
+##### 违反原则
+
+4：一致性和标准化
+
+##### 严重性等级
+
+2：主要问题，需要修复且优先级较高
+
+##### 改进建议
+
+①不展示电影票ID
+
+②不同状态的电影票分不同界面展示
+
+
 
 ### 成功案例
 
