--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -330,13 +330,33 @@
 
 ##### 相关界面图片
 
-![](C:/Users/Puzongyue/AppData/Roaming/Typora/typora-user-images/image-20201102095358113.png)
+![image.png](https://ae05.alicdn.com/kf/H2d3a161966ef4f82971a7599055dac45F.png)
 
 ##### 涉及原则
 
 1：系统状态的可视性
 
 7：依赖识别而非记忆
+
+#### 4
+
+##### 案例描述
+
+电影界面可以搜索得到电影。
+
+##### 相关界面图片
+
+![image.png](https://ae02.alicdn.com/kf/Hda79f00f1ef042308a6542743fcd99b4v.png)
+
+##### 涉及原则
+
+8：使用的灵活性及有效性
+
+7：依赖识别而非记忆
+
+
+
+
 
 ## b. 用户测试
 
