--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -369,7 +369,7 @@
 
 **Task1**
 
-你和你的朋友/家人 打算在（这周五）吃完晚饭后去电影院看新上映的（xxx），请你为你们两人买两张票
+你和你的朋友/家人 打算在这周五吃完晚饭后去电影院看新上映的《金刚川》，请你为你们两人买两张票
 
 **Task2**
 
@@ -377,7 +377,7 @@
 
 **Task3**
 
-你和你的朋友/家人打算在这周末（周五晚开始）去看一部最近上映热度高的片子，你需要买两张票，并且希望票价尽可能低。*（场外介入，打断）*正要付钱时，你的朋友突然提议想查看（xxx）的信息。
+你和你的朋友/家人打算在这周末（周五晚开始）去看一部最近上映热度高的片子，你需要买两张票，并且希望票价尽可能低。*（场外介入，打断）*正要付钱时，你的朋友突然提议想查看重映的《哈利波特》的信息。
 
 **Task4**
 
