--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -191,3 +191,31 @@
 
 ### 任务记录
 
+#### 用户1
+
+participants：2
+
+date：2020.11.2
+
+| Time  | Notes                                                        |
+| ----- | ------------------------------------------------------------ |
+| 21:06 | Task1开始                                                    |
+| 21:07 | 经过思考之后选择“电影”标签，进入电影列表                     |
+| 21:08 | 在选座界面反复浏览后选座，支付，Task1完成，Task2开始         |
+| 21:08 | 进入“我的电影票”                                             |
+| 21:09 | 评论：我会选择再找个人一起看。                               |
+| 21:09 | 浏览退票策略。                                               |
+| 21:10 | 选择退票，成功，Task2结束。评论：最好退票的地方也给个小图，退票成功钱退了多少，到哪了。 |
+| 21:11 | 进入电影票界面，开始搜索关键词“喜剧”。                       |
+| 21:12 | 评论：电影票价格都一样，高峰时间段应该更贵。                 |
+| 21:13 | 进入选座界面。提问：屏幕位置在哪？座位排布是不是有点问题？   |
+| 21:14 | 评论：最好有最佳观影区提示。                                 |
+| 21:14 | Task3结束，Task4开始。                                       |
+| 21:14 | 在电影界面搜索”金刚川“。                                     |
+| 21:15 | 进入继续支付页面，Task4结束。                                |
+| 21:17 | Task5开始。                                                  |
+| 21:19 | 决定比较电影时长。                                           |
+| 21:20 | 进入详情界面。评论：显示时长。                               |
+| 21:21 | 评论：详情界面应该有返回键。                                 |
+| 21:21 | Task5完成。                                                  |
+
