--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -419,3 +419,24 @@ date：2020.11.2
 | 21:21 | 评论：详情界面应该有返回键。                                 |
 | 21:21 | Task5完成。                                                  |
 
+#### 用户2
+
+participants：2
+
+date：2020.11.4
+
+| Time   | Notes                                                        |
+| ------ | ------------------------------------------------------------ |
+| 14：54 | Task1开始。                                                  |
+| 14：54 | 通过搜索的方式搜索得到电影《金刚川》。                       |
+| 14：54 | 评论：为什么只能点击“详情”才可以跳转。                       |
+| 14：55 | 选择好了场次，开始进行支付。                                 |
+| 14：56 | 支付成功。Task1结束，Task2开始。                             |
+| 14：56 | 成功进入“我的电影票”，犹豫一会儿后找到“可使用，可退款”。     |
+| 14：57 | 成功退款。Task2结束，Task3开始。                             |
+| 14：58 | 选择电影《风平浪静》。准备支付，这时被告知要去查看其他电影的情况。 |
+| 14：58 | 成功返回主页，查看完毕。Task3完成，Task4开始。               |
+| 14：59 | 顺利找到待支付电影票。支付成功。Task4结束。                  |
+| 14：59 | Task5开始。                                                  |
+| 14：62 | 简单浏览后表示并没有感兴趣的片子。Task5结束。                |
+
