--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -434,9 +434,34 @@ date：2020.11.4
 | 14：56 | 支付成功。Task1结束，Task2开始。                             |
 | 14：56 | 成功进入“我的电影票”，犹豫一会儿后找到“可使用，可退款”。     |
 | 14：57 | 成功退款。Task2结束，Task3开始。                             |
-| 14：58 | 选择电影《风平浪静》。准备支付，这时被告知要去查看其他电影的情况。 |
-| 14：58 | 成功返回主页，查看完毕。Task3完成，Task4开始。               |
+| 14：58 | 选择“电影”进入电影列表。选择电影《风平浪静》。准备支付，这时被告知要去查看其他电影的情况。 |
+| 14：58 | 选择“电影”返回，查看完毕。Task3完成，Task4开始。             |
 | 14：59 | 顺利找到待支付电影票。支付成功。Task4结束。                  |
 | 14：59 | Task5开始。                                                  |
 | 15：02 | 简单浏览后表示并没有感兴趣的片子。Task5结束。                |
+
+#### 用户3
+
+participants：2
+
+date：2020.11.4
+
+| Time   | Notes                                                        |
+| ------ | ------------------------------------------------------------ |
+| 16：20 | Task1开始。                                                  |
+| 16：20 | 通过搜索的方式找到《金刚川》。                               |
+| 16：20 | 评论：怎么直接点击电影名字或者图片不会跳转。                 |
+| 16：21 | 开始选择场次。                                               |
+| 16：21 | 误解影厅的座位排布：将第一排视为最后一排。                   |
+| 16：21 | Task1结束，Task2开始。                                       |
+| 16：22 | 通过支付成功的跳转进入”我的电影票“。                         |
+| 16：22 | 退票后评论：我退票成功了吗？                                 |
+| 16：23 | Task2结束，Task3开始。                                       |
+| 16：24 | 通过浏览器的回退功能回到电影列表。Task3结束，Task4开始。     |
+| 16：24 | 试图通过重新进入原先购票流程的方式继续支付。评论：我记不得买了什么场次了。 |
+| 16：25 | 发现之前的座位锁了，感到困惑，进行不下去。                   |
+| 16：26 | 在干预下，找到退票入口，成功退票。                           |
+| 16：26 | Task4结束。Task5开始。                                       |
+| 16：26 | 通过浏览器回退的方式浏览电影列表，选座支付                   |
+| 16：29 | Task5结束。                                                  |
 
