--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -457,7 +457,8 @@ date：2020.11.4
 | 16：22 | 通过支付成功的跳转进入”我的电影票“。                         |
 | 16：22 | 退票后评论：我退票成功了吗？                                 |
 | 16：23 | Task2结束，Task3开始。                                       |
-| 16：24 | 通过浏览器的回退功能回到电影列表。Task3结束，Task4开始。     |
+| 16：24 | 通过浏览器的回退功能回到电影列表。评论：怎么看热度？最终随便买了一部电影的票。 |
+| 16：24 | Task3结束，Task4开始。                                       |
 | 16：24 | 试图通过重新进入原先购票流程的方式继续支付。评论：我记不得买了什么场次了。 |
 | 16：25 | 发现之前的座位锁了，感到困惑，进行不下去。                   |
 | 16：26 | 在干预下，找到退票入口，成功退票。                           |
