--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -461,8 +461,40 @@ date：2020.11.4
 | 16：24 | Task3结束，Task4开始。                                       |
 | 16：24 | 试图通过重新进入原先购票流程的方式继续支付。评论：我记不得买了什么场次了。 |
 | 16：25 | 发现之前的座位锁了，感到困惑，进行不下去。                   |
-| 16：26 | 在干预下，找到退票入口，成功退票。                           |
+| 16：26 | 在干预下，找到继续支付入口，成功支付。                           |
 | 16：26 | Task4结束。Task5开始。                                       |
 | 16：26 | 通过浏览器回退的方式浏览电影列表，选座支付                   |
 | 16：29 | Task5结束。                                                  |
 
+#### 用户4
+
+participants：2
+
+date：2020.11.4
+
+| Time   | Notes                                                        |
+| ------ | ------------------------------------------------------------ |
+| 20：33 | 开始注册。                                                   |
+| 20：34 | 评论：为什么用户名一定要四个字母以上？我比较喜欢用名字首字母缩写做用户名。|
+| 20：35 | 成功登录。                                                   |
+| 20：36 | Task1开始。                                                  |
+| 20：36 | 犹豫了一会点击“电影”进入电影列表界面，并上下滚动二到三次找到《金刚川》 |
+| 20：36 | 在电影名字和图片上都点击了几次，最终找到详情入口。评论：为什么只有点“详情”才能进去啊。 |
+| 20：37 | 开始选择场次。                                               |
+| 20：38 | Task1结束。Task2开始。                                       |
+| 20：38 | 先进入了“已退票”界面，发现为空。                             |
+| 20：38 | 在“已退票”和“可使用（可退款）”界面中来回切换了几次，最终在“可使用（可退款）”界面退票。评论：为什么后天的票现在退款还不能全款退啊？而且两张票的距离开场时间怎么不一样？ |
+| 20：39 | Task2结束。Task3开始。                                       |
+| 20：39 | 评论：热度高是什么意思啊？最终随意选择了《数码宝贝》         |
+| 20：40 | 评论：这些排片里哪一天是周末？                               |
+| 20：40 | Task3结束。Task4开始。                                       |
+| 20：41 | 通过“电影”进入电影列表，向下滚动查看《哈利波特》             |
+| 20：41 | 首先通过下拉菜单进入“我的消费记录”，停留了一会后通过下拉菜单进入“我的电影票”，扫描了一遍之后通过“电影”回到电影列表。 |
+| 20：42 | 在“电影”界面再次进入《数码宝贝》。评论：我刚刚买的是哪一场来着？ |
+| 20：42 | 选定场次后进入购票界面。评论：这两个红的是我刚刚买的吧，为什么不能确认下单？ |
+| 20：42 | 场外提示：需要自行寻找“继续付款”入口。                       |
+| 20：42 | 胡乱点击切换页面，大约10秒后在“我的电影票”找到“待付款”继续支付。 |
+| 20：43 | 评论：怎么每次都要输一遍银行卡号，好麻烦。                   |
+| 20：43 | Task4结束。Task5开始。                                       |
+| 20：43 | 在选座时犹豫了5秒左右，多次修改。                            |
+| 20：44 | Task5结束。                                                  |
