--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -174,7 +174,7 @@
 
 ##### 相关界面图片
 
-![mainpage.png](https://i.loli.net/2020/11/02/dXhaNqwOoEr1cUP.png)
+![mainpage.png](https://ae05.alicdn.com/kf/Hacd15d8eadd04f0199b1ad0efc6f02d67.png)
 
 ##### 违反原则
 
