add: 实验细节，分工

--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -1,6 +1,29 @@
 # 交互评估实验
 
-## a. 启发式评估
+## 零. 小组信息
+
+### 小组成员
+
+| 学号      | 姓名   |
+| --------- | ------ |
+| 171250025 | 濮宗悦 |
+| 171250027 | 王雪君 |
+| 171250028 | 丁玲燕 |
+
+### 分工情况
+
+| 任务       | 参与人员               |
+| ---------- | ---------------------- |
+| 启发式评估 | 濮宗悦、王雪君、丁玲燕 |
+| 实验设计   | 濮宗悦、王雪君、丁玲燕 |
+| 实验执行   | 濮宗悦、王雪君、丁玲燕 |
+| 结果整理   | 濮宗悦、王雪君、丁玲燕 |
+
+*特别鸣谢广州路麦当劳给我们提供的场地和支持（主要指它的免费香辣鸡翅）*
+
+
+
+## 一. 启发式评估
 
 ### 评估范围
 
@@ -11,6 +34,8 @@
 2. 范围：根据该系统开发小组的要求，评估针对的页面/组件为：
 
    普通用户（非管理员）全部可见页面。
+
+
 
 ### 启发式规则
 
@@ -27,6 +52,8 @@
 | 9    | 最小化设计                   |
 | 10   | 帮助及文档                   |
 
+
+
 ### 严重性等级
 
 | 等级 | 说明                             |
@@ -35,6 +62,8 @@
 | 1    | 次要问题，需要修复，但优先级较低 |
 | 2    | 主要问题，需要修复且优先级较高   |
 | 3    | 灾难性问题，必须被修复           |
+
+
 
 ### 可用性问题
 
@@ -308,6 +337,8 @@
 
 1：系统状态的可视性
 
+
+
 #### 2
 
 ##### 案例描述
@@ -321,6 +352,8 @@
 ##### 涉及原则
 
 9：最小化设计
+
+
 
 #### 3
 
@@ -337,6 +370,8 @@
 1：系统状态的可视性
 
 7：依赖识别而非记忆
+
+
 
 #### 4
 
@@ -358,12 +393,14 @@
 
 
 
-## b. 用户测试
+## 二. 用户测试
 
 ### 测试目标
 
 1. 购票流程是否完善，发现潜在问题：在用户购票、支付和退票的整个流程中，是否能准确快速的进行想要的操作。
 2. 电影挑选比较是否易于完成：用户在挑选电影、排片时是否能够快速定位到想要的信息，作为购票参考。
+
+
 
 ### 测试任务
 
@@ -387,7 +424,25 @@
 
 你和发小很久没有见面，这周末ta约你出来玩，你们决定在下午或者晚上一起看部电影打发时间，你们需要看看最近有哪些片子，挑一部还不错的，也有排片的电影来看。
 
+
+
 ### 实验细节
+
+##### 实验人员
+
+选择5位被测，由一名实验人员和被测人单独按顺序进行上面5项任务。（实验中有4名被测人通过QQ远程控制参与实验，1名被测人线下实际使用系统参与实验）
+
+##### 实验设计
+
+在实验开始前，告知被测人，如果遇到问题和认为不合理的地方需要直接说出问题。
+
+实验期间，如果被测人遇到问题，无法推进，并自行寻找方法的时间超过3分钟，则实验人员可以告知正确的操作入口。
+
+##### 实验数据
+
+本实验所有数据均来自真实影院排片（德基电影院）。
+
+
 
 ### 任务记录
 
@@ -419,6 +474,8 @@ date：2020.11.2
 | 21:21 | 评论：详情界面应该有返回键。                                 |
 | 21:21 | Task5完成。                                                  |
 
+
+
 #### 用户2
 
 participants：2
@@ -440,6 +497,8 @@ date：2020.11.4
 | 14：59 | Task5开始。                                                  |
 | 15：02 | 简单浏览后表示并没有感兴趣的片子。Task5结束。                |
 
+
+
 #### 用户3
 
 participants：2
@@ -460,11 +519,13 @@ date：2020.11.4
 | 16：24 | 通过浏览器的回退功能回到电影列表。评论：怎么看热度？最终随便买了一部电影的票。 |
 | 16：24 | Task3结束，Task4开始。                                       |
 | 16：24 | 试图通过重新进入原先购票流程的方式继续支付。评论：我记不得买了什么场次了。 |
-| 16：25 | 发现之前的座位锁了，感到困惑，进行不下去。                   |
-| 16：26 | 在干预下，找到继续支付入口，成功支付。                           |
+| 16：25 | 发现之前的座位锁了，感到困惑。                               |
+| 16：26 | 在一段时间的尝试下，找到继续支付入口，成功支付。             |
 | 16：26 | Task4结束。Task5开始。                                       |
 | 16：26 | 通过浏览器回退的方式浏览电影列表，选座支付                   |
 | 16：29 | Task5结束。                                                  |
+
+
 
 #### 用户4
 
@@ -475,11 +536,11 @@ date：2020.11.4
 | Time   | Notes                                                        |
 | ------ | ------------------------------------------------------------ |
 | 20：33 | 开始注册。                                                   |
-| 20：34 | 评论：为什么用户名一定要四个字母以上？我比较喜欢用名字首字母缩写做用户名。|
+| 20：34 | 评论：为什么用户名一定要四个字母以上？我比较喜欢用名字首字母缩写做用户名。 |
 | 20：35 | 成功登录。                                                   |
 | 20：36 | Task1开始。                                                  |
-| 20：36 | 犹豫了一会点击“电影”进入电影列表界面，并上下滚动二到三次找到《金刚川》 |
-| 20：36 | 在电影名字和图片上都点击了几次，最终找到详情入口。评论：为什么只有点“详情”才能进去啊。 |
+| 20：36 | 犹豫了一会点击“电影”进入电影列表界面，并上下滚动二到三次找到《金刚川》。 |
+| 20：36 | 在电影名字和图片上都点击了几次，最终找到详情入口。评论：为什么只有点“详情”才能进去？ |
 | 20：37 | 开始选择场次。                                               |
 | 20：38 | Task1结束。Task2开始。                                       |
 | 20：38 | 先进入了“已退票”界面，发现为空。                             |
