add：新的用户测试

--- a/docs/交互评估实验.md
+++ b/docs/交互评估实验.md
@@ -1,4 +1,4 @@
-# 交互评估实验
+#   交互评估实验
 
 ## 零. 小组信息
 
@@ -559,3 +559,26 @@ date：2020.11.4
 | 20：43 | Task4结束。Task5开始。                                       |
 | 20：43 | 在选座时犹豫了5秒左右，多次修改。                            |
 | 20：44 | Task5结束。                                                  |
+
+#### 用户5
+
+participants：2
+
+date：2020.11.5
+
+| Time   | Notes                                                        |
+| ------ | ------------------------------------------------------------ |
+| 15:02  | Task1开始。                                                  |
+| 15:02  | 进入选座界面。评论：大屏幕在哪啊？                           |
+| 15:03  | Task1结束，Task2开始。                                       |
+| 15:03  | 理解退票策略。评论：退票策略看不懂啊。距离开场时间1天的话是不是不能退啊？ |
+| 15:04  | Task2完成，Task3开始。                                       |
+| 15:04  | 评论：热度是有多少人想看吗？                                 |
+| 15:05  | 评论：座位朝向和屏幕不一样啊。                               |
+| 15:06  | Task3完成。Task4开始。                                       |
+| 15:06  | 在浏览后，进入“我的电影票”进行支付。Task4完成。              |
+| 15:07  | Task5开始。                                                  |
+| 15:07  | 评论：详情可以点击，但是图片不可以点击。                     |
+| 15:08  | 评论：详情内容在列表里直接能看到，没必要点击详情。           |
+| 15:09  | 评论：电影院选座的时候不能把两个座位孤立隔开。               |
+| 15:09  | Task5结束。                                                  |
